--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -1,6 +1,6 @@
 <div class="footer text-center container-md">
   <p>
-    <span style="font-weight: lighter; margin-right: 6px;">&copy; Copyright {{ now.Format "2006"}} </span><span style="font-weight: bold;">Andy Baizon</span>
+    <span style="font-weight: lighter; margin-right: 6px;">&copy; Copyright {{ now.Format "2006"}} </span><span style="font-weight: bold;"> {{ .Site.Params.Author }} </span> &#183; Hugo coffee theme by <span style="font-weight: bold;"> <a href="https://github.com/dark-coffee/" style="text-decoration: none; color: #ffc532;">Andy Baizon</a></span>
   </p>
   <p>Made with &#10084; in &#127468;&#127463;</p>
 </div>
